@@ -1,7 +1,6 @@
 package com.hubformath.mathhubservice.assembler.ops.cashbook;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.hateoas.CollectionModel;
@@ -27,7 +26,7 @@ public class AssetModelAssembler implements RepresentationModelAssembler<AssetDt
             Iterable<? extends AssetDto> assets) {
             List<EntityModel<AssetDto>> assetList = StreamSupport.stream(assets.spliterator(), false)
                 .map(this::toModel)
-                .collect(Collectors.toList());
+                .toList();
     
             return CollectionModel.of(assetList, WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AssetController.class)
                   .getAllAssets())
