@@ -1,7 +1,6 @@
 package com.hubformath.mathhubservice.assembler.ops.cashbook;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.hateoas.CollectionModel;
@@ -27,7 +26,7 @@ public class ExpenseModelAssembler implements RepresentationModelAssembler<Expen
             Iterable<? extends ExpenseDto> expenses) {
         List<EntityModel<ExpenseDto>> expenseList = StreamSupport.stream(expenses.spliterator(), false)
                 .map(this::toModel)
-                .collect(Collectors.toList());
+                .toList();
 
         return CollectionModel.of(expenseList, WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(ExpenseController.class)
                 .getAllExpenses())
