@@ -1,7 +1,6 @@
 package com.hubformath.mathhubservice.assembler.systemconfig;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.hateoas.CollectionModel;
@@ -28,7 +27,7 @@ public class ExpenseTypeModelAssembler implements RepresentationModelAssembler<E
         List<EntityModel<ExpenseTypeDto>> assessmentTypeList = StreamSupport
                 .stream(assessmentTypes.spliterator(), false)
                 .map(this::toModel)
-                .collect(Collectors.toList());
+                .toList();
 
         return CollectionModel.of(assessmentTypeList, WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(ExpenseTypeController.class)
                 .getAllExpenseTypes())
