@@ -1,18 +1,16 @@
 package com.hubformath.mathhubservice.controller.ops.cashbook;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
-import org.springframework.hateoas.IanaLinkRelations;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -20,7 +18,6 @@ import org.springframework.web.bind.annotation.RestController;
 
 import com.hubformath.mathhubservice.assembler.ops.cashbook.CashTransactionModelAssembler;
 import com.hubformath.mathhubservice.dto.ops.cashbook.CashTransactionDto;
-import com.hubformath.mathhubservice.dto.ops.cashbook.CashTransactionRequestDto;
 import com.hubformath.mathhubservice.model.ops.cashbook.CashTransaction;
 import com.hubformath.mathhubservice.service.ops.cashbook.ICashTransactionService;
 
@@ -45,24 +42,12 @@ public class CashTransactionController {
     public ResponseEntity<CollectionModel<EntityModel<CashTransactionDto>>> getAllTransactions() {
         List<CashTransactionDto> transactions = transactionService.getAllTransactions().stream()
                 .map(transaction -> modelMapper.map(transaction, CashTransactionDto.class))
-                .collect(Collectors.toList());
+                .toList();
 
         CollectionModel<EntityModel<CashTransactionDto>> transactionCollectionModel = transactionModelAssembler
                 .toCollectionModel(transactions);
 
         return ResponseEntity.ok().body(transactionCollectionModel);
-    }
-
-    @PostMapping("/transactions")
-    public ResponseEntity<EntityModel<CashTransactionDto>> newTransaction(
-            @RequestBody CashTransactionRequestDto transactionRequestDto) {
-        CashTransaction newTransaction = transactionService.createTransaction(transactionRequestDto);
-
-        EntityModel<CashTransactionDto> transactionEntityModel = transactionModelAssembler
-                .toModel(modelMapper.map(newTransaction, CashTransactionDto.class));
-
-        return ResponseEntity.created(transactionEntityModel.getRequiredLink(IanaLinkRelations.SELF).toUri())
-                .body(transactionEntityModel);
     }
 
     @GetMapping("/transactions/{id}")
