@@ -1,7 +1,7 @@
 package com.hubformath.mathhubservice.controller.systemconfig;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -43,7 +43,7 @@ public class ExpenseTypeController {
     public ResponseEntity<CollectionModel<EntityModel<ExpenseTypeDto>>> getAllExpenseTypes() {
         List<ExpenseTypeDto> expenseTypes = expenseTypeService.getAllExpenseTypes().stream()
                 .map(expenseType -> modelMapper.map(expenseType, ExpenseTypeDto.class))
-                .collect(Collectors.toList());
+                .toList();
 
         CollectionModel<EntityModel<ExpenseTypeDto>> expenseTypeCollectionModel = expenseTypeModelAssembler
                 .toCollectionModel(expenseTypes);
